# Confew

./: .env  .gitignore  GEMINI.md  README.md  TODO.md  pyproject.toml
frontend/: __init__.py  app.js  index.html  styles.css
summary/: __init__.py  api.py  config.py  exceptions.py  http_api.py  llm_processing.py  pipeline.py  text_processing.py  visualization.py  youtube_processing.py
summary/utils/: __init__.py  retry.py  telemetry.py  validators.py
tests/: conftest.py  test_api_process_youtube.py  test_evaluation.py  test_fastapi_http_api.py  test_frontend_spec_placeholders.py  test_infographic_generation.py  test_integration_pipeline.py  test_llm_json_repair.py  test_llm_output_structure.py  test_performance.py  test_regression_baseline.py  test_retry_utils.py  test_smoke_main.py  test_telemetry_logging.py  test_text_processing.py  test_youtube_processing.py  test_youtube_transcript_strategy.py  tests.md
