[project]
name = "summary"
version = "0.1.0"
description = "Youtube summarizer"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
	"fastapi>=0.111.0",
	"httpx>=0.27.0",
	"pytest>=8.2.0",
	"uvicorn>=0.30.0",
]

[tool.pytest.ini_options]
addopts = "-ra"
testpaths = ["tests"]
markers = [
	"integration: integration tests for multi-step flows",
	"performance: performance and load-oriented tests",
	"evaluation: AI quality and output evaluation tests",
]
